<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soortvangrey"
    android:orientation="vertical" >



    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/gayblue"
        android:gravity="center"
        android:text="@string/hey"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/opties"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text"
            android:textColor="@android:color/background_light"
            android:textSize="12dp" />

        <Button
            android:id="@+id/AanUitKnop"
            style="@style/redcrosss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/redgradient"
            android:text="@string/AanUitKnopText"
            android:textColor="@android:color/background_light"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/herkenningspunt_button"
            style="@style/heijmen2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/fuckinggraydrawables"
            android:text="@string/POIText"
            android:textColor="@android:color/background_light"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/map"
            style="@style/heijmen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/fuckinggraydrawables"
            android:text="@string/goToMap"
            android:textColor="@android:color/background_light"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>